2004-10-18 David Inglis
	
	Update to new ICDIDebugger interface deprecating old
	Added seperate launch configuration for attaching to pid
	
	* lots of files changed

2004-10-17 Alain Magloire
	Remove deprecated method in CDI adjust the implementation.
	* src/org/eclipse/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java

2004-10-08 Mikhail Khodjaiants
	Added the launch configuration preference for the register bookkeeping.
	* LaunchUIPluginResources.properties
	* CDebuggerTab.java

2004-08-23 Mikhail Khodjaiants
	Changes in the "Debugger" tab of the launch configuration dialog.
	Replaced the "Run in debugger/Attach to running process" radio button by 
	the "Attach to running process" check box.
	Added the "Advanced" button that opens the "Advanced options" dialog.
	The "Automatically track the values of variables" check box is moved to the dialog.
	The "CoreFileDebuggerTab" class is implemented as an extension of "CDebuggerTab".
	* LaunchUIPluginResources.properties
	* AbstractCDebuggerTab.java
	* CoreFileCLaunchConfigurationTabGroup.java
	* CDebuggerTab.java
	* CorefileDebuggerTab.java renamed to CoreFileDebuggerTab.java

2004-08-12 Mikhail Khodjaiants
	Warning cleanup.
	* CApplicationLaunchShortcut.java

2004-08-16 Mikhail Khodjaiants
	Contextual launch shortcuts cleanup.
	* plugin.properties
	* plugin.xml

2004-08-12 Mikhail Khodjaiants
	Warning cleanup.
	* AbstractCLaunchDelegate.java
	* CApplicationLaunchShortcut.java

2004-08-10 Mikhail Khodjaiants
	Fix for bug 70442: Debugger launch configuration not updating properly.
	* AbstractCDebuggerTab.java

2004-07-21 Mikhail Khodjaiants
	Replaced the decprecated target factory methods.
	* CoreFileLaunchDelegate.java
	* LocalCLaunchConfigurationDelegate.java

2004-07-14 Mikhail Khodjaiants
	Fix for bug 69977: TVT3.0: Non-externalized strings in Launching Debug.
	Applied patch from Tanya Wollf.
	* CApplicationLaunchShortcut.java